[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bell_tag"
version = "1.0.0"
description = "Bell Tag tracking for Flask with automatic verification"
authors = [{name="Bell Network", email="support@belltagmanager.com"}]
dependencies = ["requests>=2.31.0", "Flask>=2.3.0"]
readme = "README.md"
license = {text="MIT"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]